ADD.AUDIO support using asset uid and the attribute `volume`

--- a/test/index.html
+++ b/test/index.html
@@ -75,6 +75,7 @@
                     
                     <vn-assets>
                         <img src="./images/backgrounds/_back_of_classroom_day.jpg" uid="back-of-classroom-day" />
+                        <audio uid="everyday" src="./audio/music/everyday.mp3" loop></audio>
                         <vn-actor
                             uid="haruka"
                             name="Haruka"
