--- a/test/index.html
+++ b/test/index.html
@@ -123,15 +123,9 @@
                         >
                         <vn-style uid="test">
                             :host {
-                                ::slotted(text-box) {
                                     .title {
-                                        background-color: rgba(100, 120, 150, 0.8);
-                                        color: red !important;
-                                        font-size: 0.8em;
-                                        padding: 0.1em 0.2em;
-                                        border-bottom: 1px solid
-                                            rgba(255, 255, 255, 0.3);
-                                        font-weight: 600;
+                                        font-size: 18px;
+                                        padding: 0.5em 1em;
                                     }
 
                                     .content {
@@ -143,7 +137,7 @@
                                     .indicator {
                                         color: #87ceeb;
                                     }
-                                }
+                                
                             }
     
                             .stand {
