refactoring, better readme

--- a/test/index.html
+++ b/test/index.html
@@ -91,18 +91,18 @@
                                 :host { transform: scale(1.7); }
                             </vn-style>
 
-                            <body-part uid="pose">
+                            <vn-layer uid="pose">
                                 <img
                                     src="./images/actors/haruka/pose-normal.png"
                                     uid="normal"
                                 />
-                            </body-part>
-                            <body-part uid="face">
+                            </vn-layer>
+                            <vn-layer uid="face">
                                 <img
                                     src="./images/actors/haruka/face-smile.png"
                                     uid="smile"
                                 />
-                            </body-part>
+                            </vn-layer>
                         </vn-actor>
 
                         <vn-actor
@@ -110,12 +110,12 @@
                             name="Kacey"
                             &pose="normal"
                         >
-                            <body-part uid="pose">
+                            <vn-layer uid="pose">
                                 <img
                                     src="./images/actors/kacey/pose-throw-back-hair.png"
                                     uid="normal"
                                 />
-                            </body-part>
+                            </vn-layer>
                         </vn-actor>
 
 
