add VNCommandStyle add STYLE command to api create npm package file add global types (types.d.ts) add

--- a/test/index.html
+++ b/test/index.html
@@ -5,6 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Test</title>
     <script src="../vn.js"></script>
+    <style>
+        [blue] {
+            color: lightblue;
+        }
+
+        [glow] {
+            color: #fff; /* Color of the text itself */
+            background-color: transparent; /* Optional: Dark background to see the glow better */
+            padding: 10px; /* Optional: Just for better display */
+            font-size: 24px; /* Optional: Make text bigger */
+            text-shadow:
+                0 0 5px #fff,
+                0 0 10px #fff,
+                0 0 15px #fff,
+                0 0 20px #0ff,
+                0 0 30px #0ff,
+                0 0 40px #0ff;
+        }
+    </style>
 </head>
 <body>
     <style>
