add VNCommandIf/Elif/Else add stubs for <vn-alias> and <vn-show> (project config elements) add prototype DSL parser and .vns language 'spec'

--- a/test/index.html
+++ b/test/index.html
@@ -55,6 +55,9 @@
                 <!-- Kacey defaults to flex layout (as a direct child of .objects), z="5" -->
                 <vn-object uid="kacey" name="Kacey" z="1" layout="flex" style="height: 768px">
                     <img src="./assets/images/actors/kacey/pose-neutral.png" alt="Kacey">
+                    <vn-alias>
+                        
+                    </vn-alias>
                 </vn-object>
                 
                 <!-- Background image. z="-1". Its inline style for absolute positioning and sizing is still important. -->
@@ -69,6 +72,7 @@
                     bottom="5%"
                     height="35%"
                     ms="15"
+                    content-padding="2rem"
                     style="
                         --speaker-font-size: 3cqi;
                         --speaker-font-family: 'Noto Sans', 'Helvetica', 'Arial', sans-serif;
