--- a/test/index.html
+++ b/test/index.html
@@ -51,6 +51,12 @@
     <div class="vn-player-container">
         <vn-player>
             <vn-project>
+                <meta name="name" content="Untitled Project">
+                <meta name="description" content="A sample visual novel project.">
+                <meta name="version" content="1.0.0">
+                <meta name="author" content="Anonymous">
+                <meta name="license" content="">
+                <meta name="language" content="en">
                 
                 <!-- Kacey defaults to flex layout (as a direct child of .objects), z="5" -->
                 <vn-object uid="kacey" name="Kacey" z="1" layout="flex" style="height: 768px">
