better example styles for the test script

--- a/test/index.html
+++ b/test/index.html
@@ -89,11 +89,10 @@
                 <text-box 
                     uid="defaultChoicebox" 
                     speaker=""
-                    left="1%"
-                    right="1%"
-                    top="1%"
-                    bottom="1%"
-                    ms="15"
+                    left="5%"
+                    right="5%"
+                    bottom="5%"
+                    height="50%"
                     
                     content-padding="2rem"
                     style="
