fix textboxes not displaying properly using custom attributes

--- a/test/index.html
+++ b/test/index.html
@@ -92,7 +92,7 @@
                     left="5%"
                     right="5%"
                     bottom="5%"
-                    height="50%"
+                    top="5%"
                     
                     content-padding="2rem"
                     style="
