Checkpoints &  Jump commands
Added checkpoint and jump commands, havent done the jump with scenes properly, and doesnt work when selecting choices to loop back to a prior checkpoint more than once. Need to fix.

--- a/test/index.html
+++ b/test/index.html
@@ -106,7 +106,7 @@
                 <audio uid="everyday" src="./assets/audio/music/everyday.mp3" loop></audio>
             </vn-project>
             <vn-scene textbox="defaultTextbox" choicebox="defaultChoicebox">
-                <vn-script src="./test.vn.js"></vn-script>
+                <vn-script src="./test2.vn.js"></vn-script>
             </vn-scene>
         </vn-player>
     </div>
